[gd_scene load_steps=3 format=3 uid="uid://c8r714miwx4u5"]

[ext_resource type="Script" path="res://Objects/asteroid_bits.gd" id="1_mjlbn"]
[ext_resource type="Texture2D" uid="uid://bq4va8d221edk" path="res://assets/images/asteroid_bits.png" id="1_uj40f"]

[node name="AsteroidBits" type="Node2D"]
script = ExtResource("1_mjlbn")

[node name="LeftBit" type="RigidBody2D" parent="."]
position = Vector2(-78, -1)
mass = 0.33

[node name="Sprite2D" type="Sprite2D" parent="LeftBit"]
scale = Vector2(2.25, 2.25)
texture = ExtResource("1_uj40f")
hframes = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LeftBit"]
polygon = PackedVector2Array(38, -38, 61, 13, 10, 68, -56, 25, -53, -27, -16, -55, 23, -66)

[node name="RightBit" type="RigidBody2D" parent="."]
position = Vector2(68, -56)
mass = 0.33

[node name="Sprite2D" type="Sprite2D" parent="RightBit"]
scale = Vector2(2.25, 2.25)
texture = ExtResource("1_uj40f")
hframes = 3
frame = 1

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="RightBit"]
polygon = PackedVector2Array(-15, 43, -48, 18, -52, -37, 5, -23, 40, 20)

[node name="BottomBit" type="RigidBody2D" parent="."]
position = Vector2(49, 42)
mass = 0.33

[node name="Sprite2D" type="Sprite2D" parent="BottomBit"]
scale = Vector2(2.25, 2.25)
texture = ExtResource("1_uj40f")
hframes = 3
frame = 2

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="BottomBit"]
polygon = PackedVector2Array(-58, 40, -6, -17, 49, -37, 50, -12, 28, 18, -10, 39)

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
